--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -38,6 +38,7 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%
 }
 
 .login-form div{
