更新登录页

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,15 +1,50 @@
+@keyframes fade-in {
+    from {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    40% {
+        transform: translateY(5px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.login-main {
+    animation: fade-in 1s ease-out;
+}
+
 html, body {
     width: 100%;
     margin: 0;
     background-color: #f7f9fe;
 }
 
+body {
+    overflow: hidden;
+}
+
 .login-main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: cover;
+    position: relative;
+    z-index: 1;
+}
+
+.anim-background {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    z-index: 0;
+    transform: rotate(90deg);
 }
 
 .login-div {
@@ -22,18 +57,23 @@ html, body {
     background-color: #ffffff;
     border: 1px solid #e4e8f7;
     border-radius: 15px;
-    box-shadow: 0 25px 60px 0 #8B9ABD66;
     margin: 15px;
+    box-shadow: 0 25px 60px 0 #8B9ABD66;
+    /*transition: box-shadow 200ms ease-in-out;*/
 }
 
-.login-div2{
+/*.login-div:hover{*/
+/*    box-shadow: 0 25px 60px 0 #8B9ABD66;*/
+/*}*/
+
+.login-div2 {
     width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.login-form{
+.login-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,12 +81,12 @@ html, body {
     width: 100%
 }
 
-.login-form div{
+.login-form div {
     width: 100%;
     margin-top: 15px;
 }
 
-.login-input{
+.login-input {
     background: none;
     width: 100%;
     height: 45px;
@@ -55,20 +95,20 @@ html, body {
     margin-top: 5px;
     padding: 10px;
     box-sizing: border-box;
-    transition: border-color 200ms ease-in-out,box-shadow 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
     outline: none;
 }
 
-.login-input:hover{
+.login-input:hover {
     border-color: #539cff;
 }
 
-.login-input:focus{
+.login-input:focus {
     border-color: #539cff;
     box-shadow: 0 6px 20px 0 #2364D24C;
 }
 
-.login-div2 form div span{
+.login-div2 form div span {
     font-size: 14px;
     color: #1f3b5e;
 }
@@ -76,14 +116,18 @@ html, body {
 .login-button {
     width: 80%;
     height: 45px;
+    margin-top: 60px;
     background: #2364d2;
     border: none;
     border-radius: 45px;
     font-size: 18px;
     font-weight: 500;
-    box-shadow: 3px 10px 20px 0 rgba(35, 100, 210, 0.3);
     color: #fff;
     cursor: pointer;
-    margin-top: 60px;
     align-content: center;
+    transition: box-shadow 200ms ease-in-out;
+}
+
+.login-button:hover{
+    box-shadow: 3px 10px 20px 0 rgba(35, 100, 210, 0.3);
 }
